* Added baubles and weather debris * Fixed issues with music * Improved terrain feature and monster placements * Added luck and combat level * Implemented forest border generation * Added ginger bread house * Fixed lots of minor bugs

--- a/DeepWoodsMod/DeepWoodsMod.csproj
+++ b/DeepWoodsMod/DeepWoodsMod.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="DeepWoods.cs" />
     <Compile Include="DeepWoodsBuilder.cs" />
+    <Compile Include="DeepWoodsDebris.cs" />
     <Compile Include="DeepWoodsEnterExit.cs" />
     <Compile Include="DeepWoodsMonsters.cs" />
     <Compile Include="DeepWoodsRandom.cs" />
@@ -52,6 +53,9 @@
     <Compile Include="DeepWoodsTileDefinitions.cs" />
     <Compile Include="DestroyableBush.cs" />
     <Compile Include="Flower.cs" />
+    <Compile Include="Game1MultiplayerAccessProvider.cs" />
+    <Compile Include="GingerBreadHouse.cs" />
+    <Compile Include="LootFreeGrass.cs" />
     <Compile Include="ModEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
