* Fixed critters not being initialized * Implemented "easter eggs": ** Can be sold for 1000g each ** Are lost if stored in inventory or chest over night ** Can be hatched in egg incubator (what animal will come out?) ** (Not yet implemented) Will spawn in DeepWoods at the day of the Egg Festival (and maybe one day after)

--- a/DeepWoodsMod/DeepWoodsMod.csproj
+++ b/DeepWoodsMod/DeepWoodsMod.csproj
@@ -52,6 +52,8 @@
     <Compile Include="DeepWoodsStuffCreator.cs" />
     <Compile Include="DeepWoodsTileDefinitions.cs" />
     <Compile Include="DestroyableBush.cs" />
+    <Compile Include="EasterEgg.cs" />
+    <Compile Include="EasterEggItem.cs" />
     <Compile Include="Flower.cs" />
     <Compile Include="Game1MultiplayerAccessProvider.cs" />
     <Compile Include="GingerBreadHouse.cs" />
