* Refactored easter egg code * Added custom FarmerSprite able to draw easter eggs when picking them up (draw code still TODO) * Minor bug fixes

--- a/DeepWoodsMod/DeepWoodsMod.csproj
+++ b/DeepWoodsMod/DeepWoodsMod.csproj
@@ -53,7 +53,9 @@
     <Compile Include="DeepWoodsTileDefinitions.cs" />
     <Compile Include="DestroyableBush.cs" />
     <Compile Include="EasterEgg.cs" />
+    <Compile Include="EasterEggFunctions.cs" />
     <Compile Include="EasterEggItem.cs" />
+    <Compile Include="FarmerSprite.cs" />
     <Compile Include="Flower.cs" />
     <Compile Include="Game1MultiplayerAccessProvider.cs" />
     <Compile Include="GingerBreadHouse.cs" />
