Refactored code: * Improved how DeepWoodsRandom works with luck * Moved magic numbers to static readonly values in DeepWoodsSettings * Made every const into readonly static

--- a/DeepWoodsMod/DeepWoodsMod.csproj
+++ b/DeepWoodsMod/DeepWoodsMod.csproj
@@ -65,6 +65,7 @@
     <Compile Include="GingerBreadHouse.cs" />
     <Compile Include="HealingFountain.cs" />
     <Compile Include="IridiumTree.cs" />
+    <Compile Include="LichtungStuff.cs" />
     <Compile Include="LootFreeGrass.cs" />
     <Compile Include="ModEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
