* Bugfixes: ** JSON serialization caused stackoverflow with Location type ** Root level didn't get warps to Secret Woods * Implemented wizard woods obelisk letter * Changed EasterEgg restore type to void egg

--- a/DeepWoodsMod/DeepWoodsMod.csproj
+++ b/DeepWoodsMod/DeepWoodsMod.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Unicorn.cs" />
     <Compile Include="WoodsObelisk.cs" />
     <Compile Include="WoodsObeliskMenu.cs" />
+    <Compile Include="XY.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="manifest.json" />
