* Refactorings: ** Moved static stuff from DeepWoods to new class DeepWoodsManager ** Made all relevant fields in DeepWoods net fields ** Moved map generation into updateMap() ** (Hopefully) improved performance in StuffCreator and Monsters ** Improved performance by only randomizing exits if a player has went through before * Increased version to 1.1-beta.0 * Improved networking * Removed multithreaded level generation as the game can't handle it * Added DeepWoodsAPI to allow third party mods adding custom stuff to the forest

--- a/DeepWoodsMod/DeepWoodsMod.csproj
+++ b/DeepWoodsMod/DeepWoodsMod.csproj
@@ -47,10 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DeepWoods.cs" />
+    <Compile Include="DeepWoodsAPI.cs" />
     <Compile Include="DeepWoodsBuilder.cs" />
     <Compile Include="DeepWoodsDebris.cs" />
     <Compile Include="DeepWoodsEnterExit.cs" />
     <Compile Include="DeepWoodsGlobals.cs" />
+    <Compile Include="DeepWoodsManager.cs" />
     <Compile Include="DeepWoodsMonsters.cs" />
     <Compile Include="DeepWoodsRandom.cs" />
     <Compile Include="DeepWoodsSettings.cs" />
@@ -68,6 +70,7 @@
     <Compile Include="Game1MultiplayerAccessProvider.cs" />
     <Compile Include="GingerBreadHouse.cs" />
     <Compile Include="HealingFountain.cs" />
+    <Compile Include="IDeepWoodsAPI.cs" />
     <Compile Include="IridiumTree.cs" />
     <Compile Include="LichtungStuff.cs" />
     <Compile Include="LootFreeGrass.cs" />
