--- a/DeepWoodsMod/manifest.json
+++ b/DeepWoodsMod/manifest.json
@@ -4,7 +4,7 @@
   "Version": "1.3-beta.2",
   "Description": "Adds an explorable forest to the secret woods. How deep does it go?",
   "UniqueID": "maxvollmer.deepwoodsmod",
-  "EntryDll": "deepwoodsmod.dll",
+  "EntryDll": "DeepWoodsMod.dll",
   "MinimumApiVersion": "2.8-beta",
   "UpdateKeys": [ "Nexus:2571" ]
 }
