Fix capitalization of dll name in manifest for unix based systems

--- a/DeepWoodsMod/manifest.json
+++ b/DeepWoodsMod/manifest.json
@@ -4,7 +4,7 @@
   "Version": "1.2-beta.4",
   "Description": "Adds an explorable forest to the secret woods. How deep does it go?",
   "UniqueID": "maxvollmer.deepwoodsmod",
-  "EntryDll": "deepwoodsmod.dll",
+  "EntryDll": "DeepWoodsMod.dll",
   "MinimumApiVersion": "2.7",
   "UpdateKeys": [ "Nexus:2571" ]
 }
