Added support for Save Anywhere

--- a/DeepWoodsMod/DeepWoodsMod.csproj
+++ b/DeepWoodsMod/DeepWoodsMod.csproj
@@ -72,6 +72,7 @@
     <Compile Include="HealingFountain.cs" />
     <Compile Include="IDeepWoodsAPI.cs" />
     <Compile Include="IridiumTree.cs" />
+    <Compile Include="ISaveAnywhereAPI.cs" />
     <Compile Include="LichtungStuff.cs" />
     <Compile Include="LootFreeGrass.cs" />
     <Compile Include="ModEntry.cs" />
