* Fixed crystal fruits not being set to "IsSpawnedObject" * Implemented missing mushroom tree clearing * Added thorny bushes * DeepWoods levels now handle explosions and make bushes and ResourceClumps destructible by bombs * Flowers and EasterEggs now get destroyed by bombs * GingerBreadHouse and IridiumTree now shake from bomb explosions

--- a/DeepWoodsMod/DeepWoodsMod.csproj
+++ b/DeepWoodsMod/DeepWoodsMod.csproj
@@ -65,6 +65,7 @@
     <Compile Include="EasterEggItem.cs" />
     <Compile Include="Excalibur.cs" />
     <Compile Include="ExcaliburStone.cs" />
+    <Compile Include="ExplodableResourceClump.cs" />
     <Compile Include="FarmerSprite.cs" />
     <Compile Include="Flower.cs" />
     <Compile Include="Game1MultiplayerAccessProvider.cs" />
