--- a/DeepWoodsMod/DeepWoodsMod.csproj
+++ b/DeepWoodsMod/DeepWoodsMod.csproj
@@ -33,8 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MaxVollmer.StardewValley.DeepWoodsMod.API, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MaxVollmer.StardewValley.DeepWoodsMod.API.1.0.0\lib\net45\MaxVollmer.StardewValley.DeepWoodsMod.API.dll</HintPath>
+    <Reference Include="MaxVollmer.StardewValley.DeepWoodsMod.API, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MaxVollmer.StardewValley.DeepWoodsMod.API.1.0.1\lib\net45\MaxVollmer.StardewValley.DeepWoodsMod.API.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -91,7 +91,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="manifest.json" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\Pathoschild.Stardew.ModBuildConfig.2.2.0\analyzers\dotnet\cs\StardewModdingAPI.ModBuildConfig.Analyzer.dll" />
