--- a/DeepWoodsMod/manifest.json
+++ b/DeepWoodsMod/manifest.json
@@ -1,10 +1,10 @@
 {
   "Name": "DeepWoodsMod",
   "Author": "Max Vollmer",
-  "Version": "1.3-beta.15",
+  "Version": "1.3-beta.16",
   "Description": "Adds an explorable forest to the secret woods. How deep does it go?",
   "UniqueID": "maxvollmer.deepwoodsmod",
   "EntryDll": "DeepWoodsMod.dll",
-  "MinimumApiVersion": "2.8-beta",
+  "MinimumApiVersion": "2.8",
   "UpdateKeys": [ "Nexus:2571" ]
 }
