--- a/DeepWoodsMod/DeepWoodsMod.csproj
+++ b/DeepWoodsMod/DeepWoodsMod.csproj
@@ -31,11 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MaxVollmer.StardewValley.DeepWoodsMod.API" Version="1.0.6" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="2.2.0" />
-  </ItemGroup>
-  <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -79,7 +74,7 @@
     <Compile Include="ModEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sounds.cs" />
-    <Compile Include="Textures.cs" />
+    <Compile Include="API\Impl\DeepWoodsTextures.cs" />
     <Compile Include="ThornyBush.cs" />
     <Compile Include="TreasureChest.cs" />
     <Compile Include="Unicorn.cs" />
@@ -90,6 +85,17 @@
   <ItemGroup>
     <None Include="i18n\default.json" />
     <None Include="manifest.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MaxVollmer.StardewValley.DeepWoodsMod.API">
+      <Version>2.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Pathoschild.Stardew.ModBuildConfig">
+      <Version>2.2.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
