--- a/DeepWoodsMod/manifest.json
+++ b/DeepWoodsMod/manifest.json
@@ -1,10 +1,10 @@
 {
   "Name": "Deep Woods",
   "Author": "Max Vollmer",
-  "Version": "1.6-beta.5",
+  "Version": "1.6.1-unofficial.2-mizzion",
   "Description": "Adds an explorable forest to the secret woods. How deep does it go?",
   "UniqueID": "maxvollmer.deepwoodsmod",
-  "EntryDll": "DeepWoodsMod.dll",
-  "MinimumApiVersion": "2.11.2",
+  "EntryDll": "DeepWoods.dll",
+  "MinimumApiVersion": "3.0.0",
   "UpdateKeys": [ "Nexus:2571" ]
 }
