Fixed crash bug caused by too early i18n initialization.

--- a/DeepWoodsMod/DeepWoodsMod.csproj
+++ b/DeepWoodsMod/DeepWoodsMod.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Framework\Messages\WarpMessage.cs" />
     <Compile Include="GingerBreadHouse.cs" />
     <Compile Include="HealingFountain.cs" />
+    <Compile Include="I18N.cs" />
     <Compile Include="IridiumTree.cs" />
     <Compile Include="ISaveAnywhereAPI.cs" />
     <Compile Include="LichtungStuff.cs" />
