--- a/DeepWoodsMod/DeepWoodsMod.csproj
+++ b/DeepWoodsMod/DeepWoodsMod.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DeepWoodsMod</RootNamespace>
     <AssemblyName>DeepWoodsMod</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,16 +31,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
   <ItemGroup>
     <Compile Include="DeepWoods.cs" />
     <Compile Include="API\Impl\DeepWoodsAPI.cs" />
@@ -91,13 +82,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MaxVollmer.StardewValley.DeepWoodsMod.API">
-      <Version>2.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json">
-      <Version>12.0.3</Version>
+      <Version>3.0.1-beta20210921</Version>
     </PackageReference>
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig">
-      <Version>3.1.0</Version>
+      <Version>4.0.0-beta.20210916</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
