--- a/DeepWoodsMod/manifest.json
+++ b/DeepWoodsMod/manifest.json
@@ -5,6 +5,6 @@
   "Description": "Adds an explorable forest to the secret woods. How deep does it go?",
   "UniqueID": "maxvollmer.deepwoodsmod",
   "EntryDll": "DeepWoodsMod.dll",
-  "MinimumApiVersion": "3.13.0",
+  "MinimumApiVersion": "3.13.0-beta.20210922",
   "UpdateKeys": [ "Nexus:2571" ]
 }
