--- a/src/DeepWoodsMod.csproj
+++ b/src/DeepWoodsMod.csproj
@@ -4,7 +4,10 @@
     <AssemblyName>DeepWoodsMod</AssemblyName>
     <RootNamespace>DeepWoodsMod</RootNamespace>
     <Version>2.0.0</Version>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GamePath>E:\SteamLibrary\steamapps\common\Stardew Valley</GamePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>portable</DebugType>
@@ -14,7 +17,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig">
-      <Version>4.0.2</Version>
+      <Version>4.3.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
