--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,10 +1,10 @@
 {
   "Name": "Deep Woods",
   "Author": "Max Vollmer",
-  "Version": "3.1.0-beta",
+  "Version": "4.0.0-alpha",
   "Description": "Adds an explorable forest to the secret woods. How deep does it go?",
   "UniqueID": "maxvollmer.deepwoodsmod",
   "EntryDll": "DeepWoodsMod.dll",
-  "MinimumApiVersion": "3.17.2",
+  "MinimumApiVersion": "4.0.8",
   "UpdateKeys": [ "Nexus:2571" ]
 }
